ct_st/st/st3/y.output
   0  $accept : translation_unit $end

   1  primary_expression : IDENTIFIER
   2                     | CONSTANT
   3                     | STRING_LITERAL
   4                     | '(' expression ')'

   5  postfix_expression : primary_expression
   6                     | postfix_expression '[' expression ']'
   7                     | postfix_expression '(' ')'
   8                     | postfix_expression '(' argument_expression_list ')'
   9                     | postfix_expression '.' IDENTIFIER
  10                     | postfix_expression PTR_OP IDENTIFIER
  11                     | postfix_expression INC_OP
  12                     | postfix_expression DEC_OP
  13                     | '(' type_name ')' '{' initializer_list '}'
  14                     | '(' type_name ')' '{' initializer_list ',' '}'

  15  argument_expression_list : assignment_expression
  16                           | argument_expression_list ',' assignment_expression

  17  unary_expression : postfix_expression
  18                   | INC_OP unary_expression
  19                   | DEC_OP unary_expression
  20                   | unary_operator cast_expression
  21                   | SIZEOF unary_expression
  22                   | SIZEOF '(' type_name ')'

  23  unary_operator : '&'
  24                 | '*'
  25                 | '+'
  26                 | '-'
  27                 | '~'
  28                 | '!'

  29  cast_expression : unary_expression
  30                  | '(' type_name ')' cast_expression

  31  multiplicative_expression : cast_expression
  32                            | multiplicative_expression '*' cast_expression
  33                            | multiplicative_expression '/' cast_expression
  34                            | multiplicative_expression '%' cast_expression

  35  additive_expression : multiplicative_expression
  36                      | additive_expression '+' multiplicative_expression
  37                      | additive_expression '-' multiplicative_expression

  38  shift_expression : additive_expression
  39                   | shift_expression LEFT_OP additive_expression
  40                   | shift_expression RIGHT_OP additive_expression

  41  relational_expression : shift_expression
  42                        | relational_expression '<' shift_expression
  43                        | relational_expression '>' shift_expression
  44                        | relational_expression LE_OP shift_expression
  45                        | relational_expression GE_OP shift_expression

  46  equality_expression : relational_expression
  47                      | equality_expression EQ_OP relational_expression
  48                      | equality_expression NE_OP relational_expression

  49  and_expression : equality_expression
  50                 | and_expression '&' equality_expression

  51  exclusive_or_expression : and_expression
  52                          | exclusive_or_expression '^' and_expression

  53  inclusive_or_expression : exclusive_or_expression
  54                          | inclusive_or_expression '|' exclusive_or_expression

  55  logical_and_expression : inclusive_or_expression
  56                         | logical_and_expression AND_OP inclusive_or_expression

  57  logical_or_expression : logical_and_expression
  58                        | logical_or_expression OR_OP logical_and_expression

  59  conditional_expression : logical_or_expression
  60                         | logical_or_expression '?' expression ':' conditional_expression

  61  assignment_expression : conditional_expression
  62                        | unary_expression assignment_operator assignment_expression

  63  assignment_operator : '='
  64                      | MUL_ASSIGN
  65                      | DIV_ASSIGN
  66                      | MOD_ASSIGN
  67                      | ADD_ASSIGN
  68                      | SUB_ASSIGN
  69                      | LEFT_ASSIGN
  70                      | RIGHT_ASSIGN
  71                      | AND_ASSIGN
  72                      | XOR_ASSIGN
  73                      | OR_ASSIGN

  74  expression : assignment_expression
  75             | expression ',' assignment_expression

  76  constant_expression : conditional_expression

  77  declaration : declaration_specifiers ';'
  78              | declaration_specifiers init_declarator_list ';'

  79  declaration_specifiers : storage_class_specifier
  80                         | storage_class_specifier declaration_specifiers
  81                         | type_specifier
  82                         | type_specifier declaration_specifiers
  83                         | type_qualifier
  84                         | type_qualifier declaration_specifiers
  85                         | function_specifier
  86                         | function_specifier declaration_specifiers

  87  init_declarator_list : init_declarator
  88                       | init_declarator_list ',' init_declarator

  89  init_declarator : declarator
  90                  | declarator '=' initializer

  91  storage_class_specifier : TYPEDEF
  92                          | EXTERN
  93                          | STATIC
  94                          | AUTO
  95                          | REGISTER

  96  type_specifier : VOID
  97                 | CHAR
  98                 | SHORT
  99                 | INT
 100                 | LONG
 101                 | FLOAT
 102                 | DOUBLE
 103                 | SIGNED
 104                 | UNSIGNED
 105                 | BOOL
 106                 | COMPLEX
 107                 | IMAGINARY
 108                 | struct_or_union_specifier
 109                 | enum_specifier
 110                 | TYPE_NAME

 111  struct_or_union_specifier : struct_or_union IDENTIFIER '{' struct_declaration_list '}'
 112                            | struct_or_union IDENTIFIER '{' '}'
 113                            | struct_or_union '{' struct_declaration_list '}'
 114                            | struct_or_union IDENTIFIER

 115  struct_or_union : STRUCT
 116                  | UNION

 117  struct_declaration_list : struct_declaration
 118                          | struct_declaration_list struct_declaration

 119  struct_declaration : specifier_qualifier_list struct_declarator_list ';'
 120                     | specifier_qualifier_list ';'

 121  specifier_qualifier_list : type_specifier specifier_qualifier_list
 122                           | type_specifier
 123                           | type_qualifier specifier_qualifier_list
 124                           | type_qualifier
 125                           | attributes specifier_qualifier_list
 126                           | attributes

 127  struct_declarator_list : struct_declarator
 128                         | struct_declarator_list ',' struct_declarator
 129                         | struct_declarator_list ',' attributes struct_declarator

 130  struct_declarator : declarator
 131                    | declarator attributes
 132                    | ':' constant_expression
 133                    | ':' constant_expression attributes
 134                    | declarator ':' constant_expression
 135                    | declarator ':' constant_expression attributes

 136  enum_specifier : ENUM '{' enumerator_list '}'
 137                 | ENUM IDENTIFIER '{' enumerator_list '}'
 138                 | ENUM '{' enumerator_list ',' '}'
 139                 | ENUM IDENTIFIER '{' enumerator_list ',' '}'
 140                 | ENUM IDENTIFIER

 141  enumerator_list : enumerator
 142                  | enumerator_list ',' enumerator

 143  enumerator : IDENTIFIER
 144             | IDENTIFIER '=' constant_expression

 145  type_qualifier : CONST
 146                 | RESTRICT
 147                 | VOLATILE

 148  function_specifier : INLINE

 149  declarator : pointer direct_declarator
 150             | direct_declarator

 151  direct_declarator : IDENTIFIER
 152                    | '(' declarator ')'
 153                    | direct_declarator '[' type_qualifier_list assignment_expression ']'
 154                    | direct_declarator '[' type_qualifier_list ']'
 155                    | direct_declarator '[' assignment_expression ']'
 156                    | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
 157                    | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
 158                    | direct_declarator '[' type_qualifier_list '*' ']'
 159                    | direct_declarator '[' '*' ']'
 160                    | direct_declarator '[' ']'
 161                    | direct_declarator '(' parameter_type_list ')'
 162                    | direct_declarator '(' identifier_list ')'
 163                    | direct_declarator '(' ')'

 164  pointer : '*'
 165          | '*' type_qualifier_list
 166          | '*' pointer
 167          | '*' type_qualifier_list pointer

 168  type_qualifier_list : type_qualifier
 169                      | type_qualifier_list type_qualifier

 170  parameter_type_list : parameter_list
 171                      | parameter_list ',' ELLIPSIS

 172  parameter_list : parameter_declaration
 173                 | parameter_list ',' parameter_declaration

 174  parameter_declaration : declaration_specifiers declarator
 175                        | declaration_specifiers abstract_declarator
 176                        | declaration_specifiers

 177  identifier_list : IDENTIFIER
 178                  | identifier_list ',' IDENTIFIER

 179  type_name : specifier_qualifier_list
 180            | specifier_qualifier_list abstract_declarator

 181  abstract_declarator : pointer
 182                      | direct_abstract_declarator
 183                      | pointer direct_abstract_declarator

 184  direct_abstract_declarator : '(' abstract_declarator ')'
 185                             | '[' ']'
 186                             | '[' assignment_expression ']'
 187                             | direct_abstract_declarator '[' ']'
 188                             | direct_abstract_declarator '[' assignment_expression ']'
 189                             | '[' '*' ']'
 190                             | direct_abstract_declarator '[' '*' ']'
 191                             | '(' ')'
 192                             | '(' parameter_type_list ')'
 193                             | direct_abstract_declarator '(' ')'
 194                             | direct_abstract_declarator '(' parameter_type_list ')'

 195  initializer : assignment_expression
 196              | '{' initializer_list '}'
 197              | '{' initializer_list ',' '}'

 198  initializer_list : initializer
 199                   | designation initializer
 200                   | initializer_list ',' initializer
 201                   | initializer_list ',' designation initializer

 202  designation : designator_list '='

 203  designator_list : designator
 204                  | designator_list designator

 205  designator : '[' constant_expression ']'
 206             | '.' IDENTIFIER

 207  statement : labeled_statement
 208            | compound_statement
 209            | expression_statement
 210            | selection_statement
 211            | iteration_statement
 212            | jump_statement

 213  labeled_statement : IDENTIFIER ':' statement
 214                    | CASE constant_expression ':' statement
 215                    | DEFAULT ':' statement

 216  compound_statement : '{' '}'
 217                     | '{' block_item_list '}'

 218  block_item_list : block_item
 219                  | block_item_list block_item

 220  block_item : declaration
 221             | statement

 222  expression_statement : ';'
 223                       | expression ';'

 224  selection_statement : IF '(' expression ')' statement
 225                      | IF '(' expression ')' statement ELSE statement
 226                      | SWITCH '(' expression ')' statement

 227  iteration_statement : WHILE '(' expression ')' statement
 228                      | DO statement WHILE '(' expression ')' ';'
 229                      | FOR '(' expression_statement expression_statement ')' statement
 230                      | FOR '(' expression_statement expression_statement expression ')' statement
 231                      | FOR '(' declaration expression_statement ')' statement
 232                      | FOR '(' declaration expression_statement expression ')' statement

 233  jump_statement : GOTO IDENTIFIER ';'
 234                 | CONTINUE ';'
 235                 | BREAK ';'
 236                 | RETURN ';'
 237                 | RETURN expression ';'

 238  translation_unit : external_declaration
 239                   | translation_unit external_declaration

 240  external_declaration : function_definition
 241                       | declaration

 242  function_definition : declaration_specifiers declarator declaration_list compound_statement
 243                      | declaration_specifiers declarator compound_statement

 244  declaration_list : declaration
 245                   | declaration_list declaration

 246  attributes : ATTRIBUTE

state 0
	$accept : . translation_unit $end  (0)

	TYPE_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	.  error

	translation_unit  goto 26
	storage_class_specifier  goto 27
	declaration_specifiers  goto 28
	declaration  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 33
	enum_specifier  goto 34
	struct_or_union  goto 35
	external_declaration  goto 36
	function_definition  goto 37


state 1
	type_specifier : TYPE_NAME .  (110)

	.  reduce 110


state 2
	storage_class_specifier : TYPEDEF .  (91)

	.  reduce 91


state 3
	storage_class_specifier : EXTERN .  (92)

	.  reduce 92


state 4
	storage_class_specifier : STATIC .  (93)

	.  reduce 93


state 5
	storage_class_specifier : AUTO .  (94)

	.  reduce 94


state 6
	storage_class_specifier : REGISTER .  (95)

	.  reduce 95


state 7
	function_specifier : INLINE .  (148)

	.  reduce 148


state 8
	type_qualifier : RESTRICT .  (146)

	.  reduce 146


state 9
	type_specifier : CHAR .  (97)

	.  reduce 97


state 10
	type_specifier : SHORT .  (98)

	.  reduce 98


state 11
	type_specifier : INT .  (99)

	.  reduce 99


state 12
	type_specifier : LONG .  (100)

	.  reduce 100


state 13
	type_specifier : SIGNED .  (103)

	.  reduce 103


state 14
	type_specifier : UNSIGNED .  (104)

	.  reduce 104


state 15
	type_specifier : FLOAT .  (101)

	.  reduce 101


state 16
	type_specifier : DOUBLE .  (102)

	.  reduce 102


state 17
	type_qualifier : CONST .  (145)

	.  reduce 145


state 18
	type_qualifier : VOLATILE .  (147)

	.  reduce 147


state 19
	type_specifier : VOID .  (96)

	.  reduce 96


state 20
	type_specifier : BOOL .  (105)

	.  reduce 105


state 21
	type_specifier : COMPLEX .  (106)

	.  reduce 106


state 22
	type_specifier : IMAGINARY .  (107)

	.  reduce 107


state 23
	struct_or_union : STRUCT .  (115)

	.  reduce 115


state 24
	struct_or_union : UNION .  (116)

	.  reduce 116


state 25
	enum_specifier : ENUM . '{' enumerator_list '}'  (136)
	enum_specifier : ENUM . IDENTIFIER '{' enumerator_list '}'  (137)
	enum_specifier : ENUM . '{' enumerator_list ',' '}'  (138)
	enum_specifier : ENUM . IDENTIFIER '{' enumerator_list ',' '}'  (139)
	enum_specifier : ENUM . IDENTIFIER  (140)

	IDENTIFIER  shift 38
	'{'  shift 39
	.  error


state 26
	$accept : translation_unit . $end  (0)
	translation_unit : translation_unit . external_declaration  (239)

	$end  accept
	TYPE_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	.  error

	storage_class_specifier  goto 27
	declaration_specifiers  goto 28
	declaration  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 33
	enum_specifier  goto 34
	struct_or_union  goto 35
	external_declaration  goto 40
	function_definition  goto 37


state 27
	declaration_specifiers : storage_class_specifier .  (79)
	declaration_specifiers : storage_class_specifier . declaration_specifiers  (80)

	TYPE_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	IDENTIFIER  reduce 79
	'('  reduce 79
	')'  reduce 79
	'['  reduce 79
	','  reduce 79
	'*'  reduce 79
	';'  reduce 79

	storage_class_specifier  goto 27
	declaration_specifiers  goto 41
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 33
	enum_specifier  goto 34
	struct_or_union  goto 35


state 28
	declaration : declaration_specifiers . ';'  (77)
	declaration : declaration_specifiers . init_declarator_list ';'  (78)
	function_definition : declaration_specifiers . declarator declaration_list compound_statement  (242)
	function_definition : declaration_specifiers . declarator compound_statement  (243)

	IDENTIFIER  shift 42
	'('  shift 43
	'*'  shift 44
	';'  shift 45
	.  error

	direct_declarator  goto 46
	declarator  goto 47
	init_declarator  goto 48
	init_declarator_list  goto 49
	pointer  goto 50


state 29
	external_declaration : declaration .  (241)

	.  reduce 241


state 30
	declaration_specifiers : type_specifier .  (81)
	declaration_specifiers : type_specifier . declaration_specifiers  (82)

	TYPE_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	IDENTIFIER  reduce 81
	'('  reduce 81
	')'  reduce 81
	'['  reduce 81
	','  reduce 81
	'*'  reduce 81
	';'  reduce 81

	storage_class_specifier  goto 27
	declaration_specifiers  goto 51
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 33
	enum_specifier  goto 34
	struct_or_union  goto 35

